--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,30 @@ h4 {
 /* ===========================
   Modals
 =========================== */
+.formModal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10000;
+  justify-content: center;
+  align-items: center;
+}
+
+.faqModal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10000;
+  justify-content: center;
+  align-items: center;
+}
+
 .modal {
   display: none;
   position: fixed;
@@ -291,21 +315,6 @@ form button[type="submit"]:hover {
 }
 
 /* Corporate Modal Background */
-#formModal {
-  display: none;
-  /* Hidden by default */
-  position: fixed;
-  z-index: 9999;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 34, 77, 0.8);
-  /* Semi-transparent dark blue */
-  padding-top: 60px;
-  font-family: 'Segoe UI', 'Roboto', sans-serif;
-}
 
 /* Form Structure */
 #applicationForm {
