--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -382,6 +382,22 @@ form button[type="submit"]:hover {
 }
 
 /* Corporate Modal Background */
+/* Corporate Modal Background */
+#formModal {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  z-index: 9999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 34, 77, 0.8);
+  /* Semi-transparent dark blue */
+  padding-top: 60px;
+  font-family: 'Segoe UI', 'Roboto', sans-serif;
+}
 
 /* Form Structure */
 #applicationForm {
@@ -670,6 +686,29 @@ form button[type="submit"]:hover {
   width: 100%;
 }
 
+/* Modal backdrop */
+.faq-modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  padding-top: 60px;
+}
+
+/* Modal content */
+.faq-content {
+  background-color: #082f4694;
+  margin: 5% auto;
+  height: 8rem;
+  padding: 20px 30px;
+  border-radius: 10px;
+  max-width: 700px;
+  position: relative;
+}
+
 .faq-content h2 {
   margin-bottom: 20px;
   color: #0056b3;
@@ -877,13 +916,6 @@ form button[type="submit"]:hover {
   border-radius: 2px;
   position: absolute;
   opacity: 1;
-}
-
-.burger:before,
-.burger span,
-.burger:after {
-  content: "";
-  @extend .burger__line;
 }
 
 /* --------------------------------------
