--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,38 +117,6 @@ h4 {
 /* ===========================
   Modals
 =========================== */
-.formModal {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 10000;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-
-.faqModal {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 10000;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-
 .modal {
   display: none;
   position: fixed;
@@ -181,6 +149,29 @@ h4 {
   color: var(--dark-blue);
   text-align: center;
   margin-bottom: 20px;
+}
+
+/* Modal backdrop */
+.faq-modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  padding-top: 60px;
+}
+
+/* Modal content */
+.faq-content {
+  background-color: #082f4694;
+  margin: 5% auto;
+  height: 8rem;
+  padding: 20px 30px;
+  border-radius: 10px;
+  max-width: 700px;
+  position: relative;
 }
 
 .modal-content button {
@@ -381,7 +372,6 @@ form button[type="submit"]:hover {
   }
 }
 
-/* Corporate Modal Background */
 /* Corporate Modal Background */
 #formModal {
   display: none;
